--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "browser": "browser.js",
   "bin": "bin.js",
   "devDependencies": {
-    "tap": "^6.2.0"
+    "tap": "^10.3.3"
   },
   "scripts": {
-    "test": "tap test/*.js --cov --branches=100"
+    "test": "tap test/*.js --100 -J"
   },
   "repository": {
     "type": "git",
