--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "tap": "^10.3.3"
   },
   "scripts": {
-    "test": "tap test/*.js --100 -J"
+    "test": "tap test/*.js --100 -J",
+    "preversion": "npm test",
+    "postversion": "npm publish",
+    "postpublish": "git push origin --all; git push origin --tags"
   },
   "repository": {
     "type": "git",
