--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
-sudo: false
 language: node_js
+sudo: false
 node_js:
-  - '0.10'
-  - '0.12'
-  - '4'
-  - '5'
-  - '6'
+  - 6
+  - 8
+  - 10
+notifications:
+  email: false
+cache:
+  directories:
+    - $HOME/.npm
