--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,18 @@
 language: node_js
-sudo: false
+
 node_js:
-  - 6
-  - 8
   - 10
-notifications:
-  email: false
+  - 8
+  - 6
+  - 4
+
+os:
+  - linux
+  - windows
+
 cache:
   directories:
     - $HOME/.npm
+
+notifications:
+  email: false
